--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -195,10 +195,10 @@ body
       display: flex
       flex-direction: column
       align-items: flex-start
-      margin: 0 147px 0 0
+      margin: 0 7px 0 0
       position: relative
-      top: -17px
-      left: -63px
+      top: -77px
+      left: -133px
       &-top
         max-width: 430px
         font-family: $font-suisse-bold
@@ -208,7 +208,7 @@ body
         text-transform: uppercase
         letter-spacing: 0.03em
         color: $grey
-        margin: 0 0 32px 0
+        margin: 0 0 12px 0
         span:last-child
           font-family: $font-suisse-bold
           color: $magenta
@@ -225,16 +225,7 @@ body
             font-size: 32px
             line-height: 22px
             color: $grey
-      &-center
-        font-family: $font-suisse-bold
-        font-size: 32px
-        line-height: 22px
-        letter-spacing: 0.03em
-        color: $grey
-        margin: 0 0 65px 0
-        span
-          font-family: $font-suisse-bold
-          color: $magenta
+
       &-bottom
         max-width: 545px
         font-family: $font-suisse-reg
@@ -248,6 +239,14 @@ body
           &:hover
             text-decoration: none
 
+    &-ship
+      position: absolute
+      width: 473px
+      height: 238px
+      background: url("../img/ship-1.png") no-repeat 0 0/contain
+      bottom: 38%
+      left: 32%
+      animation: ship-rocking 3.2s infinite
     &-wrapper
       position: relative
       z-index: 2
@@ -258,35 +257,21 @@ body
       &::before
         content: ''
         position: absolute
-        width: 135px
-        height: 210px
+        width: 75px
+        height: 80px
         background: url("../img/wheel-fav.png") no-repeat 0 0/contain
-        top: -22px
+        top: 12px
         left: 49.7%
         transform: translateX(-50%)
         z-index: 4
-      &::after
-        content: ''
-        position: absolute
-        z-index: 3
-        background: url("../img/slice.svg") no-repeat 0 0/contain
-        width: 270px
-        height: 320px
-        top: 29px
-        left: 51.6%
-        transform: translateX(-50%)
-        opacity: 0
-        transition: opacity .3s ease
-      &._win::after
-        animation: 1s bulbs-opacity ease infinite
-
       &-wrap
         position: relative
       &-btn
-        width: 190px
-        height: 190px
+        width: 220px
+        height: 220px
         z-index: 5
-        top: -167px
+        left: 5px
+        top: -207px
         cursor: pointer
         @media screen and (min-width: 551px) and (orientation: landscape) and (min-height: 500px)
           background: url("../img/wheel-btn.png") no-repeat 0 0/contain
@@ -296,14 +281,7 @@ body
           background: url("../img/wheel-btn-mob.png") no-repeat 0 0/contain
         @media (max-width: 920px) and (orientation: landscape) and (max-height: 450px)
           background: url("../img/wheel-btn-mob.png") no-repeat 0 0/contain
-        &-bottom
-          width: 500px
-          height: 500px
-          left: 50%
-          z-index: 3
-          top: -167px
-          background: url("../img/btn-bottom.svg") no-repeat 0 0/contain
-          animation: 1.8s infinite lamps-light ease-in-out
+
       &-frame
         width: 740px
         height: 850px
@@ -319,9 +297,9 @@ body
         @media (max-width: 920px) and (orientation: landscape) and (max-height: 450px)
           background: url("../img/wheel-frame-mob-2.png") no-repeat 0 0/contain
       &-reel
-        width: 605px
-        height: 605px
-        top: 42px
+        width: 545px
+        height: 545px
+        top: 43px
         bottom: auto
         z-index: 2
         @media screen and (min-width: 551px) and (orientation: landscape) and (min-height: 500px)
@@ -333,23 +311,6 @@ body
         @media (max-width: 920px) and (orientation: landscape) and (max-height: 450px)
           background: url("../img/wheel-reel-mob-2.png") no-repeat 0 0/contain
 
-      &-light
-        pointer-events: none
-        width: 760px
-        height: 760px
-        left: 50%
-        transform: translateX(-50%)
-        top: -120px
-        z-index: 1
-        animation: 1.8s infinite lamps-light ease-in-out
-        @media screen and (min-width: 551px) and (orientation: landscape) and (min-height: 500px)
-          background: url("../img/wheel-light.svg") no-repeat 50% 50%/contain
-        @media screen and (min-width: 551px) and (max-width: 1024px) and (orientation: portrait)
-          background: url("../img/wheel-light.svg") no-repeat 50% 50%/contain
-        @media screen and (max-width: 550px) and (orientation: portrait)
-          background: url("../img/wheel-light.svg") no-repeat 50% 50%/contain
-        @media (max-width: 920px) and (orientation: landscape) and (max-height: 450px)
-          background: url("../img/wheel-light.svg") no-repeat 50% 50%/contain
   &__footer
     position: absolute
     z-index: 5
@@ -455,24 +416,28 @@ body
   0%
     transform: rotate(0deg)
   80%
-    transform: rotate(998deg)
+    transform: rotate(1043deg)
   90%
-    transform: rotate(986deg)
+    transform: rotate(1031deg)
   100%
-    transform: rotate(992deg)
+    transform: rotate(1037deg)
 
 .reel-rotation-second
   animation: 6s reel-rotation-second cubic-bezier(.25,.75,.5,1.05) forwards
 
 @keyframes reel-rotation-second
   0%
-    transform: rotate(992deg)
+    transform: rotate(1037deg)
   80%
-    transform: rotate(1852deg)
+    transform: rotate(1808deg)
   90%
-    transform: rotate(1840deg)
+    transform: rotate(1796deg)
   100%
-    transform: rotate(1846deg)
+    transform: rotate(1802deg)
+
+@keyframes ship-rocking
+  50%
+    transform: rotateZ(4deg) translateY(-4px)
 
 .hide
   display: none
