--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -14,22 +14,18 @@
         .bonus__secondWin-text Реєструйся, щоб отримати можливість забрати бонус
         a(href='https://tds.favbet.partners').bonus__secondWin-btn Забирай бонус
         a(href='https://www.favbet.ua/uk/promos/promo/new_welcome/' target="_blank").bonus__secondWin-more Детальніше про умови Акції “Вітальній бонус”
-
   .bonus__main
     .bonus__main-logo
+    .bonus__main-ship
     .bonus__main-txt
-      .bonus__main-txt-top Крути #[br] #[span колесо –]  #[br] забирай #[span бонуси]
-      .bonus__main-txt-center У тебе #[span 2] спроби
+      .bonus__main-txt-top Грай,  #[br] забирай #[span бонуси]
       .bonus__main-txt-bottom * Про умови Акції “Вітальній бонус” можеш дізнатись на сайті <a href="https://www.favbet.ua/">favbet.ua</a>. Період з Акції з 04.02.2022 року по 31.12.2022 року. #[br] Бонус доступний тільки для нових клієнтів
     .bonus__main-wrapper
       .bonus__main-wheel
         .bonus__main-wheel-wrap
-          .bonus__main-wheel-btn-bottom.position
           .bonus__main-wheel-btn.position.pulse-btn
           .bonus__main-wheel-frame
           .bonus__main-wheel-reel.position
-          .bonus__main-wheel-light.position
-
 .bonus__footer
   .bonus__footer-row
     .bonus__footer-text Ліцензія на провадження діяльності з організації та проведення азартних ігор казино в мережі Інтернет від 20.04.2021 року, видана ТОВ «БК «ФАВБЕТ» на підставі Рішення КРАІЛ від 05.04.2021 року за №137 із змінами та Ліцензія на провадження діяльності з організації та проведення букмекерської діяльності від 28.12.2022 року, видана ТОВ «БК «ФАВБЕТ» на підставі Рішення КРАІЛ від 13.12.2022 року за № 433
